Fixes touch on iOS, again...

--- a/main.css
+++ b/main.css
@@ -90,11 +90,8 @@ body {
   justify-content: center;
   align-items: center;
   overflow: hidden;
-  cursor: pointer;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
-          user-select: none;
-  -webkit-tap-highlight-color: transparent;
-  -webkit-touch-callout: none; }
+          user-select: none; }
 
